...
          qaId: QaIds.inboxTab,
          iconAsset: bottomNavInboxIconAsset,
          selectedIconAsset: bottomNavInboxPressIconAsset,
          badgeCount: messagesUnreadCount,
        ),
        const GenesisBottomNavigationItem(
          label: 'Me',
          qaId: QaIds.meTab,
          iconAsset: bottomNavMeIconAsset,
          selectedIconAsset: bottomNavMePressIconAsset,
        ),
      ],
    );
...
